--- a/100knocks_preprocess.ipynb
+++ b/100knocks_preprocess.ipynb
@@ -9,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f22b04f5-86b4-4ff0-acfa-674b582ea8a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/04/24 09:08:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -887,6 +898,125 @@
     "    .withColumn(\"diff\", F.col(\"sum(amount)\") - F.lag(\"sum(amount)\", 1).over(window)) \\\n",
     "    .show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-042: レシート明細データ（df_receipt）の売上金額（amount）を日付（sales_ymd）ごとに集計し、各日付のデータに対し、前回、前々回、3回前に売上があった日のデータを結合せよ。そして結果を10件表示せよ。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/24 09:11:05 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:05 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:05 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------+------+------+------+\n",
+      "|sales_ymd|amount|diff_1|diff_2|diff_3|\n",
+      "+---------+------+------+------+------+\n",
+      "| 20170104| 36165|  8662| 12000|  2442|\n",
+      "| 20170105| 37830|  1665| 10327| 13665|\n",
+      "| 20170106| 32387| -5443| -3778|  4884|\n",
+      "| 20170107| 23415| -8972|-14415|-12750|\n",
+      "| 20170108| 24737|  1322| -7650|-13093|\n",
+      "| 20170109| 26718|  1981|  3303| -5669|\n",
+      "| 20170110| 20143| -6575| -4594| -3272|\n",
+      "| 20170111| 24287|  4144| -2431|  -450|\n",
+      "| 20170112| 23526|  -761|  3383| -3192|\n",
+      "| 20170113| 28004|  4478|  3717|  7861|\n",
+      "+---------+------+------+------+------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/04/24 09:11:06 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "window = Window.orderBy(F.asc(\"sales_ymd\"))\n",
+    "df_receipt.groupBy(\"sales_ymd\") \\\n",
+    "    .agg(F.sum(\"amount\").alias(\"amount\")) \\\n",
+    "    .orderBy(F.asc(\"sales_ymd\")) \\\n",
+    "    .withColumn(\"diff_1\", F.col(\"amount\") - F.lag(\"amount\", 1).over(window)) \\\n",
+    "    .withColumn(\"diff_2\", F.col(\"amount\") - F.lag(\"amount\", 2).over(window)) \\\n",
+    "    .withColumn(\"diff_3\", F.col(\"amount\") - F.lag(\"amount\", 3).over(window)) \\\n",
+    "    .dropna() \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-043： レシート明細データ（df_receipt）と顧客データ（df_customer）を結合し、性別コード（gender_cd）と年代（ageから計算）ごとに売上金額（amount）を合計した売上サマリデータを作成せよ。性別コードは0が男性、1が女性、9が不明を表すものとする。\n",
+    ">\n",
+    "> ただし、項目構成は年代、女性の売上金額、男性の売上金額、性別不明の売上金額の4項目とすること（縦に年代、横に性別のクロス集計）。また、年代は10歳ごとの階級とすること。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------+-------+------+\n",
+      "|age_group|  不明|   女性|  男性|\n",
+      "+---------+------+-------+------+\n",
+      "|       50|342923|6685192| 54320|\n",
+      "|       10|  4317| 149836|  1591|\n",
+      "|       80|  5111| 262923| 46360|\n",
+      "|       30| 50441| 693047|177322|\n",
+      "|       90|  NULL|   6260|  NULL|\n",
+      "|       70|  2427|  29764| 13435|\n",
+      "|       20| 44328|1363724| 72940|\n",
+      "|       60| 71418| 987741|272469|\n",
+      "|       40|483512|9320791| 19355|\n",
+      "+---------+------+-------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt.join(df_customer, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .withColumn(\"age_group\", F.floor(F.col(\"age\")/10)*10) \\\n",
+    "    .groupBy(\"age_group\") \\\n",
+    "    .pivot(\"gender\") \\\n",
+    "    .sum(\"amount\") \\\n",
+    "    .show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
