--- a/100knocks_preprocess.ipynb
+++ b/100knocks_preprocess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f22b04f5-86b4-4ff0-acfa-674b582ea8a8",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql import Window\n",
+    "from pyspark.ml.feature import OneHotEncoder\n",
     "\n",
     "spark = SparkSession.builder \\\n",
     "        .appName(\"Data_wrangling\") \\\n",
@@ -2294,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2326,11 +2327,350 @@
     "    .withColumn(\"sales_epoch\", F.lpad(\"sales_epoch\", 2, \"0\")) \\\n",
     "    .show(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-052: レシート明細データ（df_receipt）の売上金額（amount）を顧客ID（customer_id）ごとに合計の上、売上金額合計に対して2,000円以下を0、2,000円より大きい金額を1に二値化し、顧客ID、売上金額合計とともに10件表示せよ。ただし、顧客IDが\"Z\"から始まるのものは非会員を表すため、除外して計算すること。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+------+--------+\n",
+      "|   customer_id|amount|is_large|\n",
+      "+--------------+------+--------+\n",
+      "|CS024415000195|  4638|       1|\n",
+      "|CS011515000044|  2533|       1|\n",
+      "|CS017415000245|  1289|       0|\n",
+      "|CS011512000113|   686|       0|\n",
+      "|CS025414000093|  3929|       1|\n",
+      "|CS010605000007|  6420|       1|\n",
+      "|CS011415000097|  3462|       1|\n",
+      "|CS018515000090|  3756|       1|\n",
+      "|CS015415000222| 11472|       1|\n",
+      "|CS038605000003|  2833|       1|\n",
+      "+--------------+------+--------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt.filter(F.col(\"customer_id\").rlike(\"^(?!Z)\")) \\\n",
+    "    .groupBy(\"customer_id\") \\\n",
+    "    .agg(F.sum(\"amount\").alias(\"amount\")) \\\n",
+    "    .withColumn(\"is_large\", \n",
+    "                F.when(F.col(\"amount\") >= 2000, 1)\n",
+    "                .otherwise(0)) \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-053: 顧客データ（df_customer）の郵便番号（postal_cd）に対し、東京（先頭3桁が100〜209のもの）を1、それ以外のものを0に二値化せよ。さらにレシート明細データ（df_receipt）と結合し、全期間において売上実績のある顧客数を、作成した二値ごとにカウントせよ。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|is_tokyo|count|\n",
+      "+--------+-----+\n",
+      "|       1| 4400|\n",
+      "|       0| 3906|\n",
+      "+--------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_customer.withColumn(\"is_tokyo\", \n",
+    "                       F.when(F.col(\"postal_cd\")\n",
+    "                              .rlike(\"^1[0-9]{2}|^20[0-9]\"), 1)\n",
+    "                              .otherwise(0)) \\\n",
+    "    .join(df_receipt, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .select(\"customer_id\", \"is_tokyo\") \\\n",
+    "    .distinct() \\\n",
+    "    .groupBy(\"is_tokyo\") \\\n",
+    "    .count() \\\n",
+    "    .show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-054: 顧客データ（df_customer）の住所（address）は、埼玉県、千葉県、東京都、神奈川県のいずれかとなっている。都道府県毎にコード値を作成し、顧客ID、住所とともに10件表示せよ。値は埼玉県を11、千葉県を12、東京都を13、神奈川県を14とすること。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------------------------------+------------+\n",
+      "|customer_id   |address                           |address_code|\n",
+      "+--------------+----------------------------------+------------+\n",
+      "|CS021313000114|神奈川県伊勢原市粟窪**********    |14          |\n",
+      "|CS037613000071|東京都江東区南砂**********        |13          |\n",
+      "|CS031415000172|東京都渋谷区代々木**********      |13          |\n",
+      "|CS028811000001|神奈川県横浜市泉区和泉町**********|14          |\n",
+      "|CS001215000145|東京都大田区仲六郷**********      |13          |\n",
+      "|CS020401000016|東京都板橋区若木**********        |13          |\n",
+      "|CS015414000103|東京都江東区北砂**********        |13          |\n",
+      "|CS029403000008|千葉県浦安市海楽**********        |12          |\n",
+      "|CS015804000004|東京都江東区北砂**********        |13          |\n",
+      "|CS033513000180|神奈川県横浜市旭区善部町**********|14          |\n",
+      "+--------------+----------------------------------+------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_customer.select(\"customer_id\", \"address\") \\\n",
+    "    .withColumn(\"address_code\", \n",
+    "                F.when(F.col(\"address\").contains(\"埼玉県\"), 11)\n",
+    "                .when(F.col(\"address\").contains(\"千葉県\"), 12)\n",
+    "                .when(F.col(\"address\").contains(\"東京都\"), 13)\n",
+    "                .when(F.col(\"address\").contains(\"神奈川県\"), 14)) \\\n",
+    "    .show(10, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-055: レシート明細（df_receipt）データの売上金額（amount）を顧客ID（customer_id）ごとに合計し、その合計金額の四分位点を求めよ。その上で、顧客ごとの売上金額合計に対して以下の基準でカテゴリ値を作成し、顧客ID、売上金額合計とともに10件表示せよ。カテゴリ値は順に1〜4とする。\n",
+    ">\n",
+    "> - 最小値以上第1四分位未満 ・・・ 1を付与\n",
+    "> - 第1四分位以上第2四分位未満 ・・・ 2を付与\n",
+    "> - 第2四分位以上第3四分位未満 ・・・ 3を付与\n",
+    "> - 第3四分位以上 ・・・ 4を付与"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+------------+--------+\n",
+      "|   customer_id|total_amount|category|\n",
+      "+--------------+------------+--------+\n",
+      "|CS024415000195|        4638|       4|\n",
+      "|CS011515000044|        2533|       3|\n",
+      "|CS017415000245|        1289|       2|\n",
+      "|CS011512000113|         686|       2|\n",
+      "|CS025414000093|        3929|       4|\n",
+      "|CS010605000007|        6420|       4|\n",
+      "|CS011415000097|        3462|       3|\n",
+      "|CS018515000090|        3756|       4|\n",
+      "|CS015415000222|       11472|       4|\n",
+      "|CS038605000003|        2833|       3|\n",
+      "+--------------+------------+--------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt_total = df_receipt.groupBy(\"customer_id\") \\\n",
+    "    .agg(F.sum(\"amount\").alias(\"total_amount\"))\n",
+    "\n",
+    "percentile = df_receipt_total \\\n",
+    "    .agg(F.percentile(\"total_amount\", percentage=[0.25, 0.5, 0.75])) \\\n",
+    "    .first()[0]\n",
+    "p1, p2, p3 = percentile\n",
+    "\n",
+    "df_receipt_total.withColumn(\"category\",\n",
+    "                            F.when(F.col(\"total_amount\") < p1, 1)\n",
+    "                            .when((F.col(\"total_amount\") >= p1) & (F.col(\"total_amount\") < p2), 2)\n",
+    "                            .when((F.col(\"total_amount\") >= p2) & (F.col(\"total_amount\") < p3), 3)\n",
+    "                            .otherwise(4)\n",
+    "                            ) \\\n",
+    "                            .show(10)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-056: 顧客データ（df_customer）の年齢（age）をもとに10歳刻みで年代を算出し、顧客ID（customer_id）、生年月日（birth_day）とともに10件表示せよ。ただし、60歳以上は全て60歳代とすること。年代を表すカテゴリ名は任意とする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+---------+\n",
+      "|   customer_id| birth_day|age_group|\n",
+      "+--------------+----------+---------+\n",
+      "|CS021313000114|1981-04-29|       30|\n",
+      "|CS037613000071|1952-04-01|       60|\n",
+      "|CS031415000172|1976-10-04|       40|\n",
+      "|CS028811000001|1933-03-27|       60|\n",
+      "|CS001215000145|1995-03-29|       20|\n",
+      "|CS020401000016|1974-09-15|       40|\n",
+      "|CS015414000103|1977-08-09|       40|\n",
+      "|CS029403000008|1973-08-17|       40|\n",
+      "|CS015804000004|1931-05-02|       60|\n",
+      "|CS033513000180|1962-07-11|       50|\n",
+      "+--------------+----------+---------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_customer.withColumn(\"age_group\",\n",
+    "                       F.floor(F.col(\"age\")/10)*10) \\\n",
+    "    .withColumn(\"age_group\",\n",
+    "                F.when(F.col(\"age_group\") >= 60, 60)\n",
+    "                .otherwise(F.col(\"age_group\"))) \\\n",
+    "    .select(\"customer_id\", \"birth_day\", \"age_group\") \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-057: 056の抽出結果と性別コード（gender_cd）により、新たに性別×年代の組み合わせを表すカテゴリデータを作成し、10件表示せよ。組み合わせを表すカテゴリの値は任意とする。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+---------+---------+-------------+\n",
+      "|   customer_id| birth_day|age_group|gender_cd|gender_age_cd|\n",
+      "+--------------+----------+---------+---------+-------------+\n",
+      "|CS021313000114|1981-04-29|       30|        1|         1_30|\n",
+      "|CS037613000071|1952-04-01|       60|        9|         9_60|\n",
+      "|CS031415000172|1976-10-04|       40|        1|         1_40|\n",
+      "|CS028811000001|1933-03-27|       60|        1|         1_60|\n",
+      "|CS001215000145|1995-03-29|       20|        1|         1_20|\n",
+      "|CS020401000016|1974-09-15|       40|        0|         0_40|\n",
+      "|CS015414000103|1977-08-09|       40|        1|         1_40|\n",
+      "|CS029403000008|1973-08-17|       40|        0|         0_40|\n",
+      "|CS015804000004|1931-05-02|       60|        0|         0_60|\n",
+      "|CS033513000180|1962-07-11|       50|        1|         1_50|\n",
+      "+--------------+----------+---------+---------+-------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_customer.withColumn(\"age_group\",\n",
+    "                       F.floor(F.col(\"age\")/10)*10) \\\n",
+    "    .withColumn(\"age_group\",\n",
+    "                F.when(F.col(\"age_group\") >= 60, 60)\n",
+    "                .otherwise(F.col(\"age_group\"))) \\\n",
+    "    .select(\"customer_id\", \"birth_day\", \"age_group\", \"gender_cd\") \\\n",
+    "    .withColumn(\"gender_age_cd\",\n",
+    "                F.concat_ws(\"_\",F.col(\"gender_cd\"), F.col(\"age_group\"))) \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-058: 顧客データ（df_customer）の性別コード（gender_cd）をダミー変数化し、顧客ID（customer_id）とともに10件表示せよ。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+---------------+\n",
+      "|   customer_id|dummy_gender_cd|\n",
+      "+--------------+---------------+\n",
+      "|CS021313000114|  (9,[1],[1.0])|\n",
+      "|CS037613000071|      (9,[],[])|\n",
+      "|CS031415000172|  (9,[1],[1.0])|\n",
+      "|CS028811000001|  (9,[1],[1.0])|\n",
+      "|CS001215000145|  (9,[1],[1.0])|\n",
+      "|CS020401000016|  (9,[0],[1.0])|\n",
+      "|CS015414000103|  (9,[1],[1.0])|\n",
+      "|CS029403000008|  (9,[0],[1.0])|\n",
+      "|CS015804000004|  (9,[0],[1.0])|\n",
+      "|CS033513000180|  (9,[1],[1.0])|\n",
+      "|CS007403000016|  (9,[0],[1.0])|\n",
+      "|CS035614000014|  (9,[1],[1.0])|\n",
+      "|CS011215000048|  (9,[1],[1.0])|\n",
+      "|CS009413000079|  (9,[1],[1.0])|\n",
+      "|CS040412000191|  (9,[1],[1.0])|\n",
+      "|CS029415000023|  (9,[1],[1.0])|\n",
+      "|CS009315000023|  (9,[1],[1.0])|\n",
+      "|CS040702000012|  (9,[0],[1.0])|\n",
+      "|CS046615000013|  (9,[1],[1.0])|\n",
+      "|CS025412000147|  (9,[1],[1.0])|\n",
+      "+--------------+---------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoder = OneHotEncoder(inputCol=\"gender_cd\", outputCol=\"dummy_gender_cd\")\n",
+    "df_customer_dummy = encoder.fit(df_customer).transform(df_customer)\n",
+    "\n",
+    "df_customer_dummy.select(\"customer_id\", \"dummy_gender_cd\") \\\n",
+    "    .show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2344,7 +2684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
