--- a/100knocks_preprocess.ipynb
+++ b/100knocks_preprocess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f22b04f5-86b4-4ff0-acfa-674b582ea8a8",
    "metadata": {},
    "outputs": [],
@@ -3095,11 +3095,206 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-069: レシート明細データ（df_receipt）と商品データ（df_product）を結合し、顧客毎に全商品の売上金額合計と、カテゴリ大区分コード（category_major_cd）が\"07\"（瓶詰缶詰）の売上金額合計を計算の上、両者の比率を求めよ。抽出対象はカテゴリ大区分コード\"07\"（瓶詰缶詰）の売上実績がある顧客のみとし、結果を10件表示せよ。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+---------+-------------------+\n",
+      "|   customer_id|amount_all|amount_07|              ratio|\n",
+      "+--------------+----------+---------+-------------------+\n",
+      "|CS024415000195|      4638|     1431|0.30853816300129366|\n",
+      "|CS011515000044|      2533|     1064|0.42005527043031976|\n",
+      "|CS017415000245|      1289|      607| 0.4709076803723817|\n",
+      "|CS025414000093|      3929|     1010| 0.2570628658691779|\n",
+      "|CS010605000007|      6420|     3946| 0.6146417445482866|\n",
+      "|CS011415000097|      3462|     1436|  0.414789139225881|\n",
+      "|CS018515000090|      3756|     1594|0.42438764643237487|\n",
+      "|CS015415000222|     11472|     9314| 0.8118898186889819|\n",
+      "|CS038605000003|      2833|     1673| 0.5905400635368867|\n",
+      "|CS028515000242|      1525|      438| 0.2872131147540984|\n",
+      "+--------------+----------+---------+-------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt_joined = df_receipt.join(df_product, on=\"product_cd\", how=\"inner\")\n",
+    "\n",
+    "df_receipt_all = df_receipt_joined \\\n",
+    "    .groupBy(F.col(\"customer_id\")) \\\n",
+    "    .agg(F.sum(\"amount\").alias(\"amount_all\")) \\\n",
+    "\n",
+    "df_receipt_07 = df_receipt_joined \\\n",
+    "    .filter(F.col(\"category_major_cd\") == \"07\") \\\n",
+    "    .groupBy(F.col(\"customer_id\")) \\\n",
+    "    .agg(F.sum(\"amount\").alias(\"amount_07\"))\n",
+    "\n",
+    "df_receipt_all.join(df_receipt_07, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .withColumn(\"ratio\", F.col(\"amount_07\") / F.col(\"amount_all\")) \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-070: レシート明細データ（df_receipt）の売上日（sales_ymd）に対し、顧客データ（df_customer）の会員申込日（application_date）からの経過日数を計算し、顧客ID（customer_id）、売上日、会員申込日とともに10件表示せよ（sales_ymdは数値、application_dateは文字列でデータを保持している点に注意）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+----------------+------------+\n",
+      "|   customer_id| sales_ymd|application_date|elapsed_days|\n",
+      "+--------------+----------+----------------+------------+\n",
+      "|CS006214000001|2018-01-03|      2015-01-01|        1098|\n",
+      "|CS008415000097|2018-01-18|      2015-01-22|        1092|\n",
+      "|CS028414000014|2017-01-12|      2015-01-11|         732|\n",
+      "|CS025415000050|2018-01-21|      2016-01-31|         721|\n",
+      "|CS003515000195|2019-01-05|      2015-01-06|        1460|\n",
+      "|CS024514000042|2018-01-05|      2015-01-10|        1091|\n",
+      "|CS040415000178|2019-01-22|      2015-01-27|        1456|\n",
+      "|CS027514000015|2019-01-10|      2015-01-01|        1470|\n",
+      "|CS025415000134|2019-01-18|      2015-01-20|        1459|\n",
+      "|CS021515000126|2017-01-10|      2015-01-08|         733|\n",
+      "+--------------+----------+----------------+------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt.join(df_customer, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .withColumn(\"sales_ymd\", F.to_date(\"sales_ymd\",\n",
+    "                                       \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"application_date\", F.to_date(\"application_date\",\n",
+    "                                              \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"elapsed_days\", F.date_diff(end=\"sales_ymd\",\n",
+    "                                            start=\"application_date\")) \\\n",
+    "    .select(\"customer_id\", \"sales_ymd\", \"application_date\", \"elapsed_days\") \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-071: レシート明細データ（df_receipt）の売上日（sales_ymd）に対し、顧客データ（df_customer）の会員申込日（application_date）からの経過月数を計算し、顧客ID（customer_id）、売上日、会員申込日とともに10件表示せよ（sales_ymdは数値、application_dateは文字列でデータを保持している点に注意）。1ヶ月未満は切り捨てること。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+----------------+--------------+\n",
+      "|   customer_id| sales_ymd|application_date|elapsed_months|\n",
+      "+--------------+----------+----------------+--------------+\n",
+      "|CS006214000001|2018-01-03|      2015-01-01|            36|\n",
+      "|CS008415000097|2018-01-18|      2015-01-22|            35|\n",
+      "|CS028414000014|2017-01-12|      2015-01-11|            24|\n",
+      "|CS025415000050|2018-01-21|      2016-01-31|            23|\n",
+      "|CS003515000195|2019-01-05|      2015-01-06|            47|\n",
+      "|CS024514000042|2018-01-05|      2015-01-10|            35|\n",
+      "|CS040415000178|2019-01-22|      2015-01-27|            47|\n",
+      "|CS027514000015|2019-01-10|      2015-01-01|            48|\n",
+      "|CS025415000134|2019-01-18|      2015-01-20|            47|\n",
+      "|CS021515000126|2017-01-10|      2015-01-08|            24|\n",
+      "+--------------+----------+----------------+--------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt.join(df_customer, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .withColumn(\"sales_ymd\", F.to_date(\"sales_ymd\",\n",
+    "                                       \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"application_date\", F.to_date(\"application_date\",\n",
+    "                                              \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"elapsed_months\", F.floor(F.months_between(\"sales_ymd\",\n",
+    "                                            \"application_date\"))) \\\n",
+    "    .select(\"customer_id\", \"sales_ymd\", \"application_date\", \"elapsed_months\") \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> P-072: レシート明細データ（df_receipt）の売上日（df_customer）に対し、顧客データ（df_customer）の会員申込日（application_date）からの経過年数を計算し、顧客ID（customer_id）、売上日、会員申込日とともに10件表示せよ（sales_ymdは数値、application_dateは文字列でデータを保持している点に注意）。1年未満は切り捨てること。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+----------------+-------------+\n",
+      "|   customer_id| sales_ymd|application_date|elapsed_years|\n",
+      "+--------------+----------+----------------+-------------+\n",
+      "|CS006214000001|2018-01-03|      2015-01-01|            3|\n",
+      "|CS008415000097|2018-01-18|      2015-01-22|            2|\n",
+      "|CS028414000014|2017-01-12|      2015-01-11|            2|\n",
+      "|CS025415000050|2018-01-21|      2016-01-31|            1|\n",
+      "|CS003515000195|2019-01-05|      2015-01-06|            3|\n",
+      "|CS024514000042|2018-01-05|      2015-01-10|            2|\n",
+      "|CS040415000178|2019-01-22|      2015-01-27|            3|\n",
+      "|CS027514000015|2019-01-10|      2015-01-01|            4|\n",
+      "|CS025415000134|2019-01-18|      2015-01-20|            3|\n",
+      "|CS021515000126|2017-01-10|      2015-01-08|            2|\n",
+      "+--------------+----------+----------------+-------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_receipt.join(df_customer, on=\"customer_id\", how=\"inner\") \\\n",
+    "    .withColumn(\"sales_ymd\", F.to_date(\"sales_ymd\",\n",
+    "                                       \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"application_date\", F.to_date(\"application_date\",\n",
+    "                                              \"yyyymmdd\")) \\\n",
+    "    .withColumn(\"elapsed_years\", F.floor(F.months_between(\"sales_ymd\",\n",
+    "                                            \"application_date\") / 12)) \\\n",
+    "    .select(\"customer_id\", \"sales_ymd\", \"application_date\", \"elapsed_years\") \\\n",
+    "    .show(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
